# pmemcpy

./: CMakeLists.txt  readme.md
include/: pmem_memcpy.h
include/pmemcpy/: memcpy.h
include/pmemcpy/serialize/: basic_capnp.capnp  boost.h  capnproto-nocompress.h  capnproto.h  capnproto_nocompress.h  cereal.h  msgpack.h  no_serializer.h  serializer.h  serializer_factory.h
include/pmemcpy/storage/: mpi_io_posix.h  pmdk_fs.h  pmdk_hashtable.h  pmdk_list.h  posix.h  storage.h  storage_factory.h
include/pmemcpy/util/: error.h  errors.h  serializeable.h  trace.h  vector_ptr.h
old/: CMakeLists.txt  layouts.h  r1.cc  w1.cc  w2.cc
scripts/: setup.sh  small-test.sh  spack.sh  tests.sh
src/serialize/: basic_capnp.capnp.c++  basic_capnp.capnp.h
src/serialize/bp4/: BP4Base.h
test/api/: 3d.xml  new_api.cpp  test_adios.cpp  test_hdf5.cpp  test_nc5.cpp  test_pmemcpy_api.cpp
test/performance/: CMakeLists.txt
test/performance/e2e/: CMakeLists.txt  README.md
test/performance/e2e-1/: CMakeLists.txt  README.md
test/performance/e2e-1/3d/: Makefile  gread_data.ch  gwrite_data.ch  logger.h  read_3d_bp.c  read_3d_nc4.c  read_3d_nc5.c  read_3d_pmemcpy.cpp  read_3d_pmemcpy_omp.cpp  write_3d_bp.c  write_3d_nc4.c  write_3d_nc5.c  write_3d_pmemcpy.cpp  write_3d_pmemcpy_omp.cpp
test/performance/e2e-orig/: LICENSE  README.md
test/performance/e2e-orig/1d/: 1d.xml  Makefile  read_1d_bp.c  read_1d_nc4.c  read_1d_nc5.c  read_1d_pmemcpy.c  write_1d_bp.c  write_1d_nc4.c  write_1d_nc5.c  write_1d_pmemcpy.c
test/performance/e2e-orig/2d/: 2d.xml  Makefile  read_2d_bp.F90  read_2d_nc4.F90  read_2d_nc5.c  read_2d_pmemcpy.c  write_2d_bp.F90  write_2d_nc4.F90  write_2d_nc5.c  write_2d_pmemcpy.c
test/performance/e2e-orig/3d/: 3d.xml  Makefile  read_3d_bp.F90  read_3d_nc4.F90  read_3d_nc5.c  read_3d_pmemcpy.c  write_3d_bp.c  write_3d_nc4.c  write_3d_nc5.c  write_3d_pmemcpy.c
test/performance/e2e-orig/scripts/: Makefile  aa3  run_1d_bp.pbs  run_1d_nc4.pbs  run_1d_nc5.pbs  run_2d_bp.pbs  run_2d_bp_16k_s1.pbs  run_2d_bp_16k_s10.pbs  run_2d_bp_16k_s11.pbs  run_2d_bp_16k_s12.pbs  run_2d_bp_16k_s13.pbs  run_2d_bp_16k_s14.pbs  run_2d_bp_16k_s15.pbs  run_2d_bp_16k_s16.pbs  run_2d_bp_16k_s17.pbs  run_2d_bp_16k_s18.pbs  run_2d_bp_16k_s2.pbs  run_2d_bp_16k_s3.pbs  run_2d_bp_16k_s4.pbs  run_2d_bp_16k_s5.pbs  run_2d_bp_16k_s6.pbs  run_2d_bp_16k_s7.pbs  run_2d_bp_16k_s8.pbs  run_2d_bp_16k_s9.pbs  run_2d_bp_7k_s1.pbs  run_2d_bp_7k_s10.pbs  run_2d_bp_7k_s11.pbs  run_2d_bp_7k_s2.pbs  run_2d_bp_7k_s3.pbs  run_2d_bp_7k_s4.pbs  run_2d_bp_7k_s5.pbs  run_2d_bp_7k_s6.pbs  run_2d_bp_7k_s7.pbs  run_2d_bp_7k_s8.pbs  run_2d_bp_7k_s9.pbs  run_2d_nc4_16k.pbs  run_2d_nc4_16k_s1.pbs  run_2d_nc4_16k_s2.pbs  run_2d_nc4_16k_s4.pbs  run_2d_nc4_16k_s5.pbs  (+81 more)
test/performance/e2e-orig/scripts/2d.pbs/: bp_16k_s4.pbs  bp_16k_s6.pbs  bp_16k_s7.pbs  bp_16k_s8.pbs  bp_16k_s9.pbs  nc4_16k_s1.pbs  nc4_7k_s1.pbs  run_2d_nc4_16k_s3.pbs  run_2d_nc4_7k.pbs  run_2d_nc4_7k_s4.pbs  run_2d_nc4_7k_s5.pbs
test/performance/e2e-orig/scripts/3d.pbs/: bp_16k_s2.pbs  bp_16k_s3.pbs  nc4_7k_s1.pbs  nc4_7k_s10.pbs  nc4_7k_s10a.pbs  nc4_7k_s10b.pbs  nc4_7k_s11.pbs  nc4_7k_s11a.pbs  nc4_7k_s11b.pbs  nc4_7k_s12.pbs  nc4_7k_s12a.pbs  nc4_7k_s12b.pbs  nc4_7k_s13.pbs  nc4_7k_s13a.pbs  nc4_7k_s13b.pbs  nc4_7k_s14.pbs  nc4_7k_s14a.pbs  nc4_7k_s14b.pbs  nc4_7k_s15.pbs  nc4_7k_s15a.pbs  nc4_7k_s15b.pbs  nc4_7k_s16.pbs  nc4_7k_s16a.pbs  nc4_7k_s16b.pbs  nc4_7k_s17.pbs  nc4_7k_s17a.pbs  nc4_7k_s17b.pbs  nc4_7k_s18.pbs  nc4_7k_s18a.pbs  nc4_7k_s18b.pbs  nc4_7k_s19.pbs  nc4_7k_s19a.pbs  nc4_7k_s19b.pbs  nc4_7k_s1a.pbs  nc4_7k_s1b.pbs  nc4_7k_s2.pbs  nc4_7k_s20.pbs  nc4_7k_s20a.pbs  nc4_7k_s20b.pbs  nc4_7k_s21.pbs  (+79 more)
test/performance/e2e-orig/scripts/bak/: Makefile  a  aa1  aa2  run_1d_bp.pbs  run_1d_nc4.pbs  run_1d_nc5.pbs  run_2d_bp.pbs  run_2d_nc4.pbs  run_2d_nc5.pbs  run_3d_bp.pbs  run_3d_nc4_16k.pbs  run_3d_nc4_7k.pbs  run_3d_nc5.pbs  write_1d_nc5.pbs  write_3d_nc4_16k_sml.pbs  write_3d_nc4_16k_xl.pbs  write_3d_nc4_7k.pbs  write_3d_nc5.pbs
test/performance/e2e-orig/scripts/save/: run_1d_bp.pbs  run_1d_nc4.pbs  run_1d_nc5.pbs  run_2d_bp.pbs  run_2d_nc4.pbs  run_2d_nc5.pbs  run_3d_bp.pbs  run_3d_nc4.pbs  run_3d_nc5.pbs
test/performance/e2e/3d/: 3d.xml  logger.h  read_3d_bp.c  read_3d_nc4.c  read_3d_nc5.c  read_3d_pmemcpy.cpp  read_3d_pmemcpy_omp.cpp  write_3d_bp.c  write_3d_nc4.c  write_3d_nc5.c  write_3d_pmemcpy.cpp  write_3d_pmemcpy_omp.cpp
test/performance/pmemulator/: CMakeLists.txt  gwrite_particles.ch  pmemulator-fs.c  pmemulator-posix.c  pmemulator-posix.cpp  pmemulator.h
test/performance/pmemulator/ext4/: Makefile  file.c  pmemulator.h  super.c  sysfs.c
test/unit/: test_parallel_io.cpp  test_pmem.cpp  test_pmem.h  test_pmemulator.cpp  test_vector.cpp
