cmake_minimum_required( VERSION 3.9.0 )
project(e2e-1 LANGUAGES C CXX)

set( CMAKE_CXX_STANDARD 17 )
set( CMAKE_CXX_STANDARD_REQUIRED YES )
set( CMAKE_C_FLAGS "-g -O3 --fast-math" )
set( CMAKE_CXX_FLAGS "-g -O3 --fast-math" )
#set( CMAKE_C_FLAGS "-g" )
#set( CMAKE_CXX_FLAGS "-g" )

find_package(OpenMP)

set(ORIG_LIBS adios adiosread netcdf pnetcdf mpi m pthread z zfp lz4 SZ blosc pmemcpy)
set(PMEMCPY_LIBS pmemobj msgpackc boost_system boost_serialization capnp kj mpi)
set(LIBS ${ORIG_LIBS} ${PMEMCPY_LIBS})

include_directories(${CMAKE_SOURCE_DIR}/include)

set(TEST_CASES bp nc4 nc5 pmemcpy pmemcpy_omp)
set(DIMS 3d)
set(IO_TYPES read write)

function(get_test_path PREFIX)
    if(EXISTS ${PREFIX}.c)
        set(PATH ${PREFIX}.c)
        add_executable(${IO_TYPE}_${DIM}_${TEST_CASE} ${PATH})
        target_link_libraries(${IO_TYPE}_${DIM}_${TEST_CASE} ${LIBS})
        target_link_libraries(${IO_TYPE}_${DIM}_${TEST_CASE} "${OpenMP_C_FLAGS}")
        target_compile_options(${IO_TYPE}_${DIM}_${TEST_CASE} PUBLIC "${OpenMP_C_FLAGS}")
    elseif(EXISTS ${PREFIX}.cpp)
        set(PATH ${PREFIX}.cpp)
        add_executable(${IO_TYPE}_${DIM}_${TEST_CASE} ${PATH})
        target_link_libraries(${IO_TYPE}_${DIM}_${TEST_CASE} ${LIBS})
        target_link_libraries(${IO_TYPE}_${DIM}_${TEST_CASE} "${OpenMP_CXX_FLAGS}")
        target_compile_options(${IO_TYPE}_${DIM}_${TEST_CASE} PUBLIC "${OpenMP_CXX_FLAGS}")
        message("FLAGS: ${OpenMP_CXX_FLAGS}")
    else()
        message("${PREFIX}.c and ${PREFIX}.cpp don't exist")
    endif()
endfunction()

foreach(TEST_CASE IN LISTS TEST_CASES)
    foreach(IO_TYPE IN LISTS IO_TYPES)
        foreach(DIM IN LISTS DIMS)
            get_test_path(${CMAKE_CURRENT_SOURCE_DIR}/${DIM}/${IO_TYPE}_${DIM}_${TEST_CASE})
        endforeach()
    endforeach()
endforeach()